[package]
name = "random-numbers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = "0.1.*"
hermit-abi = "0.2.0"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
